--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://documenter.getpostman.com/view/513743/RWToQHzH" />
+    <meta http-equiv="refresh" content="0; url=https://explore.postman.com/api/2053/fiware-securing-access" />
     <style>
 @import url('https://fonts.googleapis.com/css?family=Montserrat%3A100%2C100italic%2C200%2C200italic%2C300%2C300italic%2Cregular%2Citalic%2C500%2C500italic%2C600%2C600italic%2C700%2C700italic%2C800%2C800italic%2C900%2C900italic&ver=4.9.6#038;subset=latin,latin-ext');
 body {padding: 10px; font: 14px; font-family: Montserrat,Helvetica,Arial,sans-serif; color:#4c4c4c;}
@@ -19,6 +19,6 @@ a:hover {color: #45d3dd;}
       of the watch."</p>
       <p>— 11th General Order of the US Marine Corps</p>
     </blockquote>
-    <p><a href="https://documenter.getpostman.com/view/513743/RWToQHzH">Redirect</a></p>
+    <p><a href="https://explore.postman.com/api/2053/fiware-securing-access">Redirect</a></p>
   </body>
 </html>
